[tool.poetry]
name = "llm-ollama"
version = "0.1.0"
description = ""
authors = ["Jason Jimenez <jasonjimenez@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.2"
langchain-ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
